--- a/packages/dnb-eufemia/src/style/themes/theme-ui/properties.scss
+++ b/packages/dnb-eufemia/src/style/themes/theme-ui/properties.scss
@@ -111,13 +111,6 @@
   // Easing
   --easing-default: cubic-bezier(0.42, 0, 0, 1);
 
-  // Scrollbar
-  --scrollbar-track-width: 0.5rem;
-  --scrollbar-thumb-width: 0.5rem;
-  --scrollbar-track-color: var(--color-black-8);
-  --scrollbar-thumb-color: var(--color-sea-green);
-  --scrollbar-thumb-hover-color: var(--color-emerald-green);
-
   @if mixin-exists('propertiesCustomisation') {
     @include propertiesCustomisation();
   }
